tdf#98849 SaveToolbarController: Correct initial modified state

Regression of 69882b0ef861099fd6bfa802d6f7ba5d1391c269

Change-Id: I3698efff2f1e62e513d779400eff7f1c4a4145e4